# LexGuard

./: .dockerignore  .gitignore  .railwayignore  API_KEYS_SETUP.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  ENHANCED_NO_LLM.md  FINAL_FIX.md  FINAL_SETUP.md  FIND_VARIABLES_TAB.md  FIX_BUILD_TIMEOUT.md  FIX_IMAGE_SIZE.md  FIX_IMAGE_SIZE_FINAL.md  FIX_LANGCHAIN_IMPORT_ERROR.md  FIX_OPENAI_IMPORT_ERROR.md  FIX_STREAMLIT_SECRETS_ERROR.md  Makefile  NO_LLM_MODE.md  OLLAMA_RAILWAY_SETUP.md  OLLAMA_SETUP.md  OLLAMA_URL_GUIDE.md  PROJECT_SUMMARY.md  QUICK_FIX.md  QUICK_OLLAMA_SETUP.md  RAILWAY_DEPLOYMENT.md  RAILWAY_SETUP_NOW.md  README.md  README_ENHANCED.md  SETUP.md  SWITCH_TO_OLLAMA.md  TROUBLESHOOTING.md  WHATS_NEW.md  pyproject.toml  requirements.txt
.github/workflows/: keep_alive.yml
app/: __init__.py  analysis_displays.py  streamlit_app.py  streamlit_app_legacy.py  streamlit_app_old.py
backend/: __init__.py  main.py
backend/routes/: analysis.py  chat.py  contract.py  upload.py
lexguard/: __init__.py  config.py
lexguard/analysis/: __init__.py  dates.py  key_terms.py  obligations.py  parties.py
lexguard/ingest/: __init__.py  cleaner.py  ocr_extractor.py  pdf_extractor.py
lexguard/llm/: __init__.py  base.py  gemini_client.py  none_client.py  ollama_client.py  openai_client.py  prompts.py
lexguard/models/: __init__.py  clause.py  contract.py  risk.py
lexguard/nlp/: __init__.py  chunker.py  embedders.py  (+2 more)
scripts/: keep_alive.py
tests/: __init__.py  test_chunker.py  test_docx_report.py  test_end_to_end_dummy.py  test_risk_scoring.py
(+11 files in other folders)
